fix image layout shifting

--- a/src/app.css
+++ b/src/app.css
@@ -51,8 +51,22 @@ body {
   }
 }
 
-/* Intrinsic Dimenson
+/* Intrinsic Dimension */
 img {
-  width: var(--size);
-  height: auto;
-} */
+  aspect-ratio: attr(width) / attr(height);
+}
+
+.aspect-auto {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: calc(400 / 800 * 100%);
+}
+
+.aspect-auto img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
